[package]
name = "vmod_prequal"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Guillaume Quintard guillaume.quintard@gmail.com"]

[dependencies]
anyhow = "1.0"
bytes = "1.1.0"
cdylib-plugin = "0.1"
futures = "0.3"
futures-util = "0.3"
hyper = "0.14.16"
lru = "0.7.1"
rand = "0.8.5"
regex = "1.5"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ureq = "2.12.1"
varnish = {path = "../../src/varnish-rs/varnish", features = ["ffi"] }

[build-dependencies]
cdylib-plugin = "0.1"

[lib]
crate-type = ["cdylib"]
