[package]
name = "vmod_prequal"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Guillaume Quintard guillaume.quintard@gmail.com"]

[dependencies]
anyhow = "1.0"
bytes = "1.1.0"
cdylib-plugin = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
hyper = "0.14.16"
lru = "0.7.1"
rand = "0.8.5"
rand_distr = "0.4"
regex = "1.5"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ureq = "2.12.1"
varnish = { git = "https://github.com/mnutt/varnish-rs", branch = "vcl-backend-arg-2", features = ["ffi"] }

[build-dependencies]
cdylib-plugin = "0.1"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "simulate"
path = "src/bin/simulate/main.rs"

[package.metadata.deb]
name = "vmod-prequal"
maintainer = "Michael Nutt <michael@nuttnet.net>"
provides = "vmod-prequal"
conflicts = "vmod-prequal"
section = "web"
priority = "optional"
assets = [
    ["target/release/libvmod_prequal.so", "usr/lib/varnish/vmods/", "644"],
]
extended-description = """
A Varnish VMOD implementing a new load balancing director designed to minimize
real-time request latency.
"""

[package.metadata.deb.variants.varnish77]
name = "vmod-prequal-varnish77"
depends = "varnish (>= 7.7.0), varnish (<< 8.0.0)"

[package.metadata.deb.variants.varnish80]
name = "vmod-prequal-varnish80"
depends = "varnish (>= 8.0.0), varnish (<< 8.1.0)"
